idea/testData/multiModuleHighlighting/platform1/header/header.kt
platform class <error descr="[PLATFORM_DECLARATION_WITHOUT_DEFINITION] No definition is found for platform declaration 'My'">My</error> {

}